force-app/main/default/objects/Orderr__c/Orderr__c.object-meta.xml
<CustomObject>
    <label>Orderr</label>
    <nameField>
        <displayFormat>ORD-{0000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>