force-app/main/default/objects/Orderr__c/fields/Customerr__c.field-meta.xml
<CustomField>
    <fullName>Customerr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customerr</label>
    <referenceTo>Customerr__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>